<?xml version="1.0"?>
<package format="3">
  <name>imu_plugin</name>
  <version>0.0.1</version>
  <description>Ignition ros2 pluign for imu data acquirement</description>
  <maintainer email="michael1015999@gmail.com">Minsik Oh</maintainer>
  <author>Minsik Oh</author>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <!-- default version to use in official ROS2 packages is Ignition Fortress for ROS2 humble -->
  <depend condition="$IGNITION_VERSION == ''">ignition-gazebo6</depend>
  <depend condition="$IGNITION_VERSION == citadel">ignition-gazebo3</depend>
  <depend condition="$IGNITION_VERSION == edifice">ignition-gazebo5</depend>
  <depend condition="$IGNITION_VERSION == fortress">ignition-gazebo6</depend>
  <depend>ignition-plugin</depend>
  <depend>pluginlib</depend>

  <depend>yaml_cpp_vendor</depend>
  <depend>rclcpp_lifecycle</depend>

  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
